plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.emomap'
version = '0.0.1-SNAPSHOT'

/*
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
*/

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.5.4"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'          // MVC
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springframework:spring-webflux'                        // WebClient
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'  // Swagger
    implementation 'org.springframework.boot:spring-boot-starter-security'    // Security

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5' // jackson serializer

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.postgresql:postgresql'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

springBoot {
    mainClass.set("com.emomap.emomap.EmomapApplication")
}


tasks.named('test') {
    useJUnitPlatform()
}
